# snake_in_terminal

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
src/: apple.cpp  apple.h  events.h  map.cpp  map.h  snake.cpp  snake.h
